Dropdown menu out of screen issue fixed.

--- a/app/code/WDPH/Megamenu/view/frontend/web/css/wdph_megamenu_local.css
+++ b/app/code/WDPH/Megamenu/view/frontend/web/css/wdph_megamenu_local.css
@@ -17,7 +17,7 @@
 .wdph-megamenu-container .wdph_megamenu-dropdown-right { float: left; }
 .wdph-megamenu-container .wdph-megamenu-navigation-container li>a.item-link { position: relative; }
 .wdph-megamenu-container .wdph-megamenu-navigation-container li.wdph-megamenu-item .wdph-megamenu-item-add-label { position: absolute; text-transform: uppercase; font: inherit; font-size: 9px; padding: 2px; border-radius: 2px; line-height: 1; color: #000; top: 0; right: 0; }
-.wdph-megamenu-container .wdph-megamenu-submenu { display: none; background-color: #fff; }
+.wdph-megamenu-container .wdph-megamenu-submenu { display: none; visibility: hidden; background-color: #fff; }
 .wdph-megamenu-container .wdph-megamenu-navigation-container li.level-0.wdph-dropdown-type-fullwidth .wdph-megamenu-submenu.level0 { position: absolute; left: 0; width: 100%; z-index: 99999 }
 .wdph-megamenu-container .wdph-megamenu-submenu.visible { display: block; }
 .wdph-megamenu-container .wdph-dropdown-type-fullwidth .wdph-megamenu-submenu.level0>ul { float: left; width: 100%; }
@@ -46,6 +46,7 @@
 .wdph-megamenu-container .wdph-megamenu-navigation-container .wdph-megamenu-item.wdph-dropdown-type-classic ul { padding: 0; }
 .wdph-megamenu-container .wdph-megamenu-navigation-container .wdph-megamenu-item.wdph-dropdown-type-classic li { font-size: 12px; margin: 0; }
 .wdph-megamenu-container .wdph-megamenu-navigation-container .wdph-megamenu-item.wdph-dropdown-type-classic li a.item-link { line-height: 4; }
+.wdph-megamenu-container .wdph-megamenu-navigation-container .wdph-megamenu-item.wdph-dropdown-type-classic .wdph-megamenu-submenu.right { right: 100%; left: unset; }
 /*Classic Menu END*/
 
 /*TOP NAVIGATION END*/
